# GUI-OpenGL

./: CMakeLists.txt  main.cpp
import/glad/include/glad/: gl.h  glad.h
import/glad/src/: glad.c
src/: Bases.h  glad.c
